# pit-wall-intelligence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  refresh-data.yml  weekly-retrain.yml
api/: Dockerfile  __init__.py  main.py
app/: streamlit_app.py
app/pages/: 1_stint_analysis.py  2_pit_window_finder.py  3_driver_comparison.py  4_strategy_simulator.py  5_season_overview.py  6_race_by_race.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fact_lap.sql  fact_pit_stop.sql  fact_stint.sql  schema.yml
dbt/models/staging/: stg_laps.sql
docs/: data_dictionary.md  known_limitations.md  methodology.md
docs/model_cards/: degradation_model.md  undercut_classifier.md
docs/writeups/: 2024_monaco_strategy.md  LINKEDIN_POST.md  retrospective_2024_08_monaco_gp.md  retrospective_2024_13_hungarian_gp.md  retrospective_2024_16_italian_gp.md
notebooks/: 01_data_exploration.ipynb  03_model_validation.ipynb
scripts/: bench_api.py  build_notebook.py  explain_undercut.py  ingest_seasons.py  race_retrospective.py  sensitivity_analysis.py  smoke_test.py  train_and_validate.py
src/pitwall/: __init__.py  cli.py  config.py  ui.py
src/pitwall/features/: __init__.py  undercut.py
src/pitwall/ingest/: __init__.py  ergast_client.py  fastf1_client.py
src/pitwall/models/: __init__.py  degradation_curve.py  loaders.py  pit_cost.py  undercut_classifier.py
src/pitwall/simulation/: __init__.py  race_simulator.py
src/pitwall/transform/: __init__.py  fuel_correction.py  schemas.py  stint_features.py
src/pitwall/utils/: __init__.py  io.py
src/pitwall/viz/: __init__.py  driver_names.py  stint_plot.py  team_colors.py
tests/: test_api.py  test_fuel_correction.py  test_models.py  test_pit_cost.py  test_pit_type.py  test_stint_features.py  test_undercut_features.py
